tests/baselines/reference/jsDeclarationsTypeReferences.errors.txt
index.js(3,1): error TS18055: Declaration file contains hand-written type reference directives: "node"


==== index.js (1 errors) ====
    /// <reference types="node" />
    
    const Something = require("fs").Something;
    ~~~~~
!!! error TS18055: Declaration file contains hand-written type reference directives: "node"
    
    const thing = new Something();
    
    module.exports = {
        thing
    };
    
==== node_modules/@types/node/index.d.ts (0 errors) ====
    declare module "fs" {
        export class Something {}
    }